--- a/reviews.html
+++ b/reviews.html
@@ -61,19 +61,18 @@
       <div class="reviews__content">
         <ul class="reviews__list">
           <li class="rewiews__item">
-            <!--<div class="rewiews__item-img">-->
-            <div class="reviews-top-line">
-              <img src="./img/ivanpet.png" alt="Фото" class="rewiews__img-element">
+             <div class="reviews__item-top-line">
+              <img src="./img/ivanpet.png" alt="Фото" class="rewiews__item-img-element">
               <div class="rewiews__item-user-name">
-                <div class="user-link">
-                  <a href="#" class="uservk">Иван Петрович</a>
-                  <img src="./img/vk-blue.png" alt="vk" class="reviews-title-icon">
+                <div class="rewiews__item-user-link">
+                  <a href="#" class="rewiews__item-user-link-vk">Иван Петрович</a>
+                  <img src="./img/vk-blue.png" alt="vk" class="reviews__title-icon-vk">
                 </div>
                 <div class="ellipse">90-е</div>
               </div>
             </div>
-            <div class="reviews-user-content">
-              <h2 class="reviews-user-heading__title">Крутой квиз про 90-е.</h2>
+            <div class="reviews__user-content">
+              <h2 class="reviews__user-heading-title">Крутой квиз про 90-е.</h2>
               <div class="reviews__desc">
                 <p>
                   Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
@@ -92,19 +91,18 @@
             </div>
           </li>
           <li class="rewiews__item">
-            <!--<div class="rewiews__item-img">-->
-            <div class="reviews-top-line">
-              <img src="./img/lizasid.png" alt="Фото" class="rewiews__img-element">
+            <div class="reviews__item-top-line">
+              <img src="./img/lizasid.png" alt="Фото" class="rewiews__item-img-element">
               <div class="rewiews__item-user-name">
-                <div class="user-link">
-                  <a href="#" class="uservk">Лиза Сидорова</a>
-                  <img src="./img/vk-blue.png" alt="vk" class="reviews-title-icon">
+                <div class="rewiews__item-user-link">
+                  <a href="#" class="rewiews__item-user-link-vk">Лиза Сидорова</a>
+                  <img src="./img/vk-blue.png" alt="vk" class="reviews__title-icon-vk">
                 </div>
                 <div class="ellipse">Кино и музыка</div>
               </div>
             </div>
-            <div class="reviews-user-content">
-              <h2 class="reviews-user-heading__title">Интересный квиз.</h2>
+            <div class="reviews__user-content">
+              <h2 class="reviews__user-heading-title">Интересный квиз.</h2>
               <div class="reviews__desc">
                 <p>
                   Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
@@ -124,18 +122,18 @@
           </li>
           <li class="rewiews__item">
             <!--<div class="rewiews__item-img">-->
-            <div class="reviews-top-line">
-              <img src="./img/ekatjmih.png" alt="Фото" class="rewiews__img-element">
+            <div class="reviews__item-top-line">
+              <img src="./img/ekatjmih.png" alt="Фото" class="rewiews__item-img-element">
               <div class="rewiews__item-user-name">
-                <div class="user-link">
-                  <a href="#" class="uservk">Екатерина Жмых</a>
-                  <img src="./img/vk-blue.png" alt="vk" class="reviews-title-icon">
+                <div class="rewiews__item-user-link">
+                  <a href="#" class="rewiews__item-user-link-vk">Екатерина Жмых</a>
+                  <img src="./img/vk-blue.png" alt="vk" class="reviews__title-icon-vk">
                 </div>
                 <div class="ellipse">IT-викторина</div>
               </div>
             </div>
-            <div class="reviews-user-content">
-              <h2 class="reviews-user-heading__title">Очень понравилась викторина.</h2>
+            <div class="reviews__user-content">
+              <h2 class="reviews__user-heading-title">Очень понравилась викторина.</h2>
               <div class="reviews__desc">
                 <p>
                   Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
@@ -155,19 +153,18 @@
             </div>
           </li>
           <li class="rewiews__item">
-            <!--<div class="rewiews__item-img">-->
-            <div class="reviews-top-line">
-              <img src="./img/antonigor.png" alt="Фото" class="rewiews__img-element">
+            <div class="reviews__item-top-line">
+              <img src="./img/antonigor.png" alt="Фото" class="rewiews__item-img-element">
               <div class="rewiews__item-user-name">
-                <div class="user-link">
-                  <a href="#" class="uservk">Антон Игоревич</a>
-                  <img src="./img/vk-blue.png" alt="vk" class="reviews-title-icon">
+                <div class="rewiews__item-user-link">
+                  <a href="#" class="rewiews__item-user-link-vk">Антон Игоревич</a>
+                  <img src="./img/vk-blue.png" alt="vk" class="reviews__title-icon-vk">
                 </div>
                 <div class="ellipse">Гарри Поттер</div>
               </div>
             </div>
-            <div class="reviews-user-content">
-              <h2 class="reviews-user-heading__title">Был первый раз, очень круто. Не пожалел, что сходил!</h2>
+            <div class="reviews__user-content">
+              <h2 class="reviews__user-heading-title">Был первый раз, очень круто. Не пожалел, что сходил!</h2>
               <div class="reviews__desc">
                 <p>
                   Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
@@ -221,70 +218,70 @@
       </div>
     </section>
     <section class="form-reviews">
-      <div class="form-reviews-wrapper">
-        <h2 class="form-reviews-title">Оставьте отзыв</h2>
+      <div class="form-reviews__wrapper">
+        <h2 class="form-reviews__title">Оставьте отзыв</h2>
         <form action="" class="form">
-          <div class="form-row">
-            <input type="text" name="" class="input" id="" placeholder="Имя Отчество">
-            <input type="text" name="" class="input" id="" placeholder="Ссылка на профиль VK">
+          <div class="form__row">
+            <input type="text" name="" class="form__row-input" id="" placeholder="Имя Отчество">
+            <input type="text" name="" class="form__row-input" id="" placeholder="Ссылка на профиль VK">
           </div>
-          <div class="form-row">
-            <input type="textarea" name="" class="input-textarea" id="" placeholder="Напишите свой честный отзыв ;)">
+          <div class="form__row">
+            <input type="textarea" name="" class="form__row-input-textarea" id="" placeholder="Напишите свой честный отзыв ;)">
           </div>
         </form>
-        <div class="down-line">
-          <div class="question">Какими услугами компании пользуетесь?</div>
-          <ul class="answers">
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">IT-викторина</div>
+        <div class="form-reviews__down-line">
+          <div class="form-reviews__down-line-question">Какими услугами компании пользуетесь?</div>
+          <ul class="form-reviews__down-line-answers">
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">IT-викторина</div>
               </label>
             </li>
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">Весенняя игра</div>
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">Весенняя игра</div>
               </label>
             </li>
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">Кино и музыка</div>
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">Кино и музыка</div>
               </label>
             </li>
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">Гарри Поттер</div>
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">Гарри Поттер</div>
               </label>
             </li>
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">Назад в 90-е</div>
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">Назад в 90-е</div>
               </label>
             </li>
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">Никакими</div>
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">Никакими</div>
               </label>
             </li>
-            <li class="controls-item">
-              <label class="controls-elem">
-                <input type="checkbox" class="controls-checkbox">
-                <div class="ellipse-answer controls-ellipse-answer">Другое</div>
+            <li class="form-reviews__controls-item">
+              <label class="form-reviews__controls-elem">
+                <input type="checkbox" class="form-reviews__controls-checkbox">
+                <div class="form-reviews__ellipse-answer form-reviews__controls-ellipse-answer">Другое</div>
               </label>
             </li>
           </ul>
         </div>
 
-        <div class="bottoms-line">
-          <div class="form__buttom">
-            <button type="reset" class="button bottom-clear">очистить</button>
+        <div class="form-reviews__bottoms-line">
+          <div class="form-reviews__form-buttom">
+            <button type="reset" class="button form-reviews__bottom-clear">очистить</button>
           </div>
-          <div class="form__buttom">
+          <div class="form-reviews__form-buttom">
             <button type="submit" class="button">отправить</button>
           </div>
         </div>
